--- a/app/views/grape_swagger_rails/application/index.html.erb
+++ b/app/views/grape_swagger_rails/application/index.html.erb
@@ -96,7 +96,11 @@
 
     <form id='api_selector'>
       <div class='input'><input placeholder="http://example.com/api" id="input_baseUrl" name="baseUrl" type="text"/></div>
-      <div class='input'><input placeholder="api_key" id="input_apiKey" name="apiKey" type="text" value="<%= GrapeSwaggerRails.options.api_key_default_value %>"/></div>
+      <div class='input'>
+        <input id="input_apiKey" name="apiKey" type="text"
+               placeholder="<%= GrapeSwaggerRails.options.api_key_name %>"
+               value="<%= GrapeSwaggerRails.options.api_key_default_value %>"/>
+      </div>
       <div class='input'><a id="explore" class="exploreBtn" href="#">Explore</a></div>
     </form>
   </div>
